Unity/im_unity_sdk_plus/Assets/TencentIMSDK/Native/NativeSDK.cs

using com.tencent.imsdk.unity.utils;
using com.tencent.imsdk.unity.types;
using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using com.tencent.imsdk.unity.enums;
using com.tencent.imsdk.unity.callback;
using Newtonsoft.Json;
using UnityEngine;
using AOT;
using System.Text;

namespace com.tencent.imsdk.unity.native
{
    public class IMNativeSDK
    {
        #region DllImport
#if UNITY_EDITOR
#if UNITY_EDITOR_OSX
                    public const string MyLibName = "ImSDKForMac";
#else
                    public const string MyLibName = "ImSDK";
#endif
#else
#if UNITY_IPHONE
                    public const string MyLibName = "__Internal";
#elif UNITY_ANDROID
                    public const string MyLibName = "ImSDK";
#elif UNITY_STANDALONE_WIN
                    public const string MyLibName = "ImSDK";
#elif UNITY_STANDALONE_OSX
                    public const string MyLibName = "ImSDKForMac";
#else
        public const string MyLibName = "ImSDK";
#endif
#endif

        #endregion


        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMLogin(IntPtr user_id, IntPtr user_sig, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMInit(long sdk_app_id, IntPtr json_sdk_config);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMUninit();

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TIMGetSDKVersion();

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMSetConfig(IntPtr json_config, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern long TIMGetServerTime();



        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMLogout(CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGetLoginStatus();

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGetLoginUserID(StringBuilder user_id_buffer);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMConvGetConvList(CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMConvDelete(IntPtr conv_id, int conv_type, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMConvGetConvInfo(IntPtr json_get_conv_list_param, CommonValueCallback cb, IntPtr user_data);
        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMConvSetDraft(string conv_id, int conv_type, IntPtr draft_param);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMConvCancelDraft(string conv_id, int conv_type);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMConvPinConversation(string conv_id, int conv_type, bool is_pinned, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMConvGetTotalUnreadMessageCount(CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgSendMessage(string conv_id, int conv_type, IntPtr message_param, StringBuilder message_id, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgCancelSend(string conv_id, int conv_type, IntPtr message_id, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgFindMessages(IntPtr message_id_array, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgReportReaded(string conv_id, int conv_type, IntPtr message_param, CommonValueCallback cb, IntPtr user_data);


        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgMarkAllMessageAsRead(CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgRevoke(string conv_id, int conv_type, IntPtr message_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgFindByMsgLocatorList(string conv_id, int conv_type, IntPtr message_locator_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgImportMsgList(string conv_id, int conv_type, IntPtr message_list_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgSaveMsg(string conv_id, int conv_type, IntPtr message_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgGetMsgList(string conv_id, int conv_type, IntPtr message_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgDelete(string conv_id, int conv_type, IntPtr json_msgdel_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgListDelete(string conv_id, int conv_type, IntPtr message_list, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgClearHistoryMessage(string conv_id, int conv_type, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgSetC2CReceiveMessageOpt(IntPtr json_identifier_array, int opt, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgGetC2CReceiveMessageOpt(IntPtr json_identifier_array, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgSetGroupReceiveMessageOpt(IntPtr group_id, int opt, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgDownloadElemToPath(IntPtr json_download_elem_param, IntPtr path, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgDownloadMergerMessage(IntPtr json_single_msg, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgBatchSend(IntPtr json_batch_send_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgSearchLocalMessages(IntPtr json_search_message_param, CommonValueCallback cb, IntPtr user_data);
        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMMsgSetLocalCustomData(IntPtr json_msg_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupCreate(IntPtr json_group_create_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupDelete(IntPtr group_id, CommonValueCallback cb, IntPtr user_data);



        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupJoin(IntPtr group_id, IntPtr hello_message, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupQuit(IntPtr group_id, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupInviteMember(IntPtr json_group_invite_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupDeleteMember(IntPtr json_group_delete_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupGetJoinedGroupList(CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupGetGroupInfoList(IntPtr group_id_list, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]

        public static extern int TIMGroupModifyGroupInfo(IntPtr json_group_modifyinfo_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupGetMemberInfoList(IntPtr json_group_getmeminfos_param, CommonValueCallback cb, IntPtr user_data);
        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupModifyMemberInfo(IntPtr json_group_modifymeminfo_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupGetPendencyList(IntPtr json_group_getpendence_list_param, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupReportPendencyReaded(long time_stamp, CommonValueCallback cb, IntPtr user_data);
        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupHandlePendency(IntPtr json_group_handle_pendency_param, CommonValueCallback cb, IntPtr user_data);


        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupGetOnlineMemberCount(IntPtr group_id, CommonValueCallback cb, IntPtr user_data);

        [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int TIMGroupSearchGroups(IntPtr json_group_search_groups_param, CommonValueCallback cb, IntPtr user_data);
